# rouse

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  mise.toml
.github/workflows/: ci.yml
crates/rouse-adapters/: Cargo.toml
crates/rouse-adapters/src/persistence/sqlite/: alert.rs  escalation.rs  escalation_queue.rs  event.rs  group.rs  mod.rs  noise.rs  notification_queue.rs  schedule.rs
crates/rouse-app/: Cargo.toml
crates/rouse-app/src/: alert_service.rs  error.rs  grouping_service.rs  lib.rs  noise_service.rs  router.rs  schedule_service.rs
crates/rouse-core/: Cargo.toml
crates/rouse-core/src/: channel.rs  error.rs  events.rs  ids.rs  lib.rs
crates/rouse-core/src/alert/: fingerprint.rs  group.rs  grouping.rs  mod.rs  noise.rs  severity.rs  source.rs  status.rs
crates/rouse-core/src/escalation/: mod.rs  step.rs  target.rs
crates/rouse-core/src/schedule/: mod.rs  rotation.rs  shift_override.rs
crates/rouse-core/src/user/: mod.rs  phone.rs
crates/rouse-ports/: Cargo.toml
crates/rouse-ports/src/: error.rs  inbound.rs  lib.rs  outbound.rs  types.rs
crates/rouse-server/: Cargo.toml
crates/rouse-server/src/: main.rs
