[package]
name = "rouse-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
rouse-core = { path = "../rouse-core" }
rouse-ports = { path = "../rouse-ports" }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
